--- a/options.conf
+++ b/options.conf
@@ -1,3 +1,9 @@
+[package]
+name = enum34
+url = http://pypi.debian.net/enum34/enum34-1.1.6.tar.gz
+archives = 
+giturl = 
+
 [autospec]
 # build 32 bit libraries
 32bit = false
