--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = enum34
 url = http://pypi.debian.net/enum34/enum34-1.1.6.tar.gz
 archives = 
-giturl = 
+giturl = https://bitbucket.org/stoneleaf/enum34/
 
 [autospec]
 # build 32 bit libraries
